tests/parser/tests/cases/should_fail/unclose_type_args/case.stderr
error: failed to parse
 --> $DIR/case.hash:1:5
1 |   k<t := do_something();
  |       ^ here
  = note: expected an operator, however received a `:`.
  = help: consider adding either a `.`, `=`, or `;`
